# slpcc

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
src/slpcc/: nlpcc.py  quadratic_cauchy_improvement.pyx
src/slpcc/examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  gnash1mal.py  gnash2mal.py  jr1al.py  jr2al.py
src/test/: nlpcc_test.py
