[metadata]
name = slpcc
version = 0.0.1
author = Paul Manns
author_email = paul.manns@tu-dortmund.de
description = Trust-region method for bound-constrained MPCCs with nonlinear objective
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paulmanns/slpcc
project_urls =
    Bug Tracker = https://github.com/paulmanns/slpcc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSS License :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib
    unittest2
    Cython

[options.packages.find]
where = src
